--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
         "start": "serve"
     },
     "dependencies": {
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "fastify": "^3.24.0",
+        "multiparty": "^4.2.2",
         "nodemailer": "^6.7.1",
         "serve": "^13.0.2"
     },
