--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "serve"
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "fastify": "^3.24.0",
