--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "A website for finding local places, new and old!",
     "scripts": {
-        "start": "serve"
+        "start": "node server.js"
     },
     "dependencies": {
         "body-parser": "^1.19.0",
