--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^5.1.3",
+    "cloudinary": "^1.27.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "fastify": "^3.24.0",
+    "heroku-ssl-redirect": "^0.1.1",
+    "multer": "^1.4.4",
+    "multiparty": "^4.2.2",
+    "nodemailer": "^6.7.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2",
-    "body-parser": "^1.19.0",
-        "cloudinary": "^1.27.1",
-        "dotenv": "^10.0.0",
-        "express": "^4.17.1",
-        "express-fileupload": "^1.2.1",
-        "fastify": "^3.24.0",
-        "heroku-ssl-redirect": "^0.1.1",
-        "multer": "^1.4.4",
-        "multiparty": "^4.2.2",
-        "nodemailer": "^6.7.1",
-        "serve": "^13.0.2"
+    "serve": "^13.0.2",
+    "web-vitals": "^2.1.2"
   },
   "author": "Tony Alas",
   "devDependencies": {
