add a test 'TestContactForm.js' page to get the contact form working in React

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "serve": "node server.js",
+    "serve": "node server_react.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
