--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,31 @@
     ],
     "spellchecker.ignoreWordsList": [
         "REFRESHTOKEN",
-        "ACCESSTOKEN"
+        "ACCESSTOKEN",
+        "phoneNumber",
+        "picturePath",
+        "phoneNumberDescription",
+        "location1Name",
+        "phoneNumber2",
+        "phoneNumberDescription2",
+        "location2Name",
+        "publicEmail",
+        "websiteURL",
+        "facebookURL",
+        "etsyURL",
+        "instagramURL",
+        "instagramUsername",
+        "instagramURL2",
+        "instagramUsername2",
+        "googleMapsLink",
+        "address2",
+        "googleMapsLink2",
+        "embeddedMapsLink",
+        "embeddedMapsLink2",
+        "hasMultipleLocations",
+        "hasHours",
+        "locationsHaveDifferentHours",
+        "hoursDays",
+        "hoursTimes"
     ]
 }
