added an hoursMessage key to the objects for when a business has a message regarding the hours. Added G.S.S. Towing business

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,35 +1,33 @@
 {
-    "cSpell.words": [
-        "manualtherapyclinic",
-        "themtclinic"
-    ],
-    "spellchecker.ignoreWordsList": [
-        "REFRESHTOKEN",
-        "ACCESSTOKEN",
-        "phoneNumber",
-        "picturePath",
-        "phoneNumberDescription",
-        "location1Name",
-        "phoneNumber2",
-        "phoneNumberDescription2",
-        "location2Name",
-        "publicEmail",
-        "websiteURL",
-        "facebookURL",
-        "etsyURL",
-        "instagramURL",
-        "instagramUsername",
-        "instagramURL2",
-        "instagramUsername2",
-        "googleMapsLink",
-        "address2",
-        "googleMapsLink2",
-        "embeddedMapsLink",
-        "embeddedMapsLink2",
-        "hasMultipleLocations",
-        "hasHours",
-        "locationsHaveDifferentHours",
-        "hoursDays",
-        "hoursTimes"
-    ]
+  "cSpell.words": ["manualtherapyclinic", "themtclinic"],
+  "spellchecker.ignoreWordsList": [
+    "REFRESHTOKEN",
+    "ACCESSTOKEN",
+    "phoneNumber",
+    "picturePath",
+    "phoneNumberDescription",
+    "location1Name",
+    "phoneNumber2",
+    "phoneNumberDescription2",
+    "location2Name",
+    "publicEmail",
+    "websiteURL",
+    "facebookURL",
+    "etsyURL",
+    "instagramURL",
+    "instagramUsername",
+    "instagramURL2",
+    "instagramUsername2",
+    "googleMapsLink",
+    "address2",
+    "googleMapsLink2",
+    "embeddedMapsLink",
+    "embeddedMapsLink2",
+    "hasMultipleLocations",
+    "hasHours",
+    "locationsHaveDifferentHours",
+    "hoursDays",
+    "hoursTimes",
+    "hoursMessage"
+  ]
 }
