fixed hours for plant joy. got the open now button working, everything is prepared for it. I just need to do more test cases and un-comment the button when im ready to release it

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,15 @@
     "locationsHaveDifferentHours",
     "hoursDays",
     "hoursTimes",
-    "hoursMessage"
+    "hoursMessage",
+    "openingHours",
+    "sunday",
+    "monday",
+    "tuesday",
+    "wednesday",
+    "thursday",
+    "friday",
+    "saturday",
+    "closingHours"
   ]
 }
