updated Business of the Week. Updated Whats new page. Prepped whats new and discover page for open now button launching soon

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,9 @@
     "thursday",
     "friday",
     "saturday",
-    "closingHours"
+    "closingHours",
+    "businessPicture1",
+    "businessPicture2",
+    "businessPicture3"
   ]
 }
