getting ready for new business of the week and added 3 new businesses

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
     "closingHours",
     "businessPicture1",
     "businessPicture2",
-    "businessPicture3"
+    "businessPicture3",
+    "openPastMidnight"
   ]
 }
